Fixing mobile main manu
Fix for
https://community.openproject.com/projects/openproject/work_packages/257
85/activity

„On mobile, side navigation is cut off if content is shorter than side
navigation“

[ci skip]

--- a/app/assets/stylesheets/layout/_base_mobile.sass
+++ b/app/assets/stylesheets/layout/_base_mobile.sass
@@ -40,9 +40,9 @@
     padding-bottom: 0 !important
     position: relative !important
     top: 0 !important
+    min-height: calc(100vH - #{$header-height-mobile} - #{$footer-height})
 
   #main
-    min-height: calc(100vH - $header-height-mobile)
     height: initial !important
     overflow: auto !important
 
